tests/error/ptr_arg_res.gw
// [contains] is reserved
typedef void test(int this){}
